--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
-  "builds": [{ "src": "src/server.js", "use": "@vercel/node" }],
+  "builds": [{ "src": "src/server.js", "use": "@now/node" }],
   "routes": [{ "src": "/(.*)", "dest": "src/server.js" }]
 }
