--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@faker-js/faker": "^8.3.1",
     "bcrypt": "^5.1.1",
     "chai": "^5.0.0",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
